cmake_minimum_required(VERSION 3.13...3.27)

# initialize the SDK based on PICO_SDK_PATH
# note: this must happen before project()
include(pico_sdk_import.cmake)

project(sopurano)

# initialize the Raspberry Pi Pico SDK
pico_sdk_init()

add_executable(main
    main.c
)

target_link_libraries(main
    pico_stdlib
)

pico_add_extra_outputs(main)
